--- a/google-maps/google-maps-vanilla/styles.css
+++ b/google-maps/google-maps-vanilla/styles.css
@@ -5,9 +5,8 @@ body{
 	width: 100%;
 	overflow: hidden;
 	
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-	  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-	  sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont,'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+	  
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -41,7 +40,6 @@ body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-weight: bold;
 	
 }
 
@@ -51,4 +49,5 @@ body{
 
 .dsclogo .text{
 	padding-left: 10px;
+	color: rgb(92, 92, 92);
 }
