Add info button and logout button

--- a/google-maps/google-maps-vanilla/styles.css
+++ b/google-maps/google-maps-vanilla/styles.css
@@ -10,6 +10,63 @@ body{
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.modal-header .title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.modal-header .close-button {
+    cursor: pointer;
+}
+
+.modal-body {
+    padding: 10px 15px;
+}
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 9;
+    pointer-events: none;
+}
+
+#overlay.active {
+    pointer-events: all;
+    opacity: 1;
+}
+
 .map-container {
 	display: flex;
 	justify-content: center;
@@ -81,10 +138,18 @@ body{
 }
 }
 
+.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
+.material-icons.md-36 { font-size: 36px; }
+
+.info {
+    cursor: pointer;
+}
+
 .logout {
 	position: fixed;
 	right: 10px;
-	top: 5px;
+    top: 5px;
+    cursor: pointer;
 }
 
 .logout button {
