--- a/web-scraper/react-challenge/client/src/App.css
+++ b/web-scraper/react-challenge/client/src/App.css
@@ -1,6 +1,3 @@
-body{
-	background-color: rgb(233, 239, 250);
-}
 
 *{
 	box-sizing: border-box;
@@ -16,7 +13,6 @@ body{
 	font-size: 15pt;
 	padding: 5px 10px;
 	border-radius: 8px;
-	width: calc(100% - 105px);
 }
 
 .submitButton{
@@ -24,15 +20,12 @@ body{
 	color: white;
 	border: none;
 	outline:  none !important;
-	padding: 5px 10px;
 	border-radius: 8px;
 	font-size: 15pt;
 	margin-left: 10px;
 	cursor: pointer;
-}
-
-.submitButton:hover{
-	filter: brightness(120%);
+	margin-top: 10px;
+	padding: 5px 100px !important;
 }
 
 .submitButton:active{
@@ -41,9 +34,16 @@ body{
 
 .card.mainCard{
 	padding: 10px;
-	border: 2px solid  #003a91;
+	border: 1px solid rgb(4, 123, 254);
 	margin-top: 20px;
 	border-radius: 8px;
 	background-color: white;
 	min-height: 300px;
+	box-shadow: 0px 0px 14px 0px  rgba(117, 124, 131, 0.158);
+}
+
+.flexCenter{
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
